--- a/gnome-frugalware/theme/Frugalware/gtk-3.0/toolbar.css
+++ b/gnome-frugalware/theme/Frugalware/gtk-3.0/toolbar.css
@@ -3,15 +3,15 @@
  ********************/
 
 .toolbar {
+	border-width: 0 0 1 0;
+	-unico-inner-stroke-width: 0 0 1 0;
+	border-color: shade (@bg_color, 0.60);
+
     background-image: -gtk-gradient (linear,
 				     left top,
 				     left bottom,
 				     from (@bg_color),
-                                     color-stop (0.94, shade (@theme_bg_color, 0.88)),
-                                     color-stop (0.95, shade (@theme_bg_color, 0.94)),
-                                     color-stop (0.97, shade (@theme_bg_color, 0.94)),
-                                     color-stop (0.99, shade (@theme_bg_color, 0.60)),
-				     to (shade (@bg_color, 0.60)));
+				     to (shade (@bg_color, 0.88)));
     padding: 2;
 }
 
@@ -24,7 +24,7 @@
     border-color: shade (@theme_bg_color, 0.91);
 }
 
-.toolbar.separator {
+.toolbar .separator {
     border-width: 0;
 }
 
@@ -32,19 +32,54 @@
  * Inline toolbars *
  *******************/
 
-.inline-toolbar.toolbar {
-    border-width: 1;
-    border-radius: 3;
-    border-style: solid;
 
-    background-image: -gtk-gradient (linear,
-				     left top,
-				     left bottom,
-				     from (@toolbar_gradient_base),
-				     color-stop (0.16, @toolbar_gradient_step1),
-				     color-stop (0.90, @toolbar_gradient_step2),
-				     color-stop (0.98, @toolbar_gradient_final),
-                                     color-stop (0.99, shade (@theme_bg_color, 0.83)),
-				     to (shade (@theme_bg_color, 0.83)));
+.inline-toolbar.toolbar,
+.inline-toolbar.toolbar .button {
+
+    padding: 0;
+
+    -unico-border-gradient: -gtk-gradient (linear,
+        left top, left bottom,
+        from (shade (@bg_color, 0.78)),
+        to (shade (@bg_color, 0.60)));
+
+    background-image: -gtk-gradient (linear, left top, left bottom,
+                                     from (shade (@base_color, 1.00)),
+                                     color-stop (0.50, shade (@base_color, 0.96)),
+									 color-stop (0.51, shade (@base_color, 0.92)),
+                                     to (shade (@base_color, 0.88)));
+
 }
+
+.inline-toolbar.toolbar {
+    -GtkToolbar-button-relief: normal;
+}
+
+.inline-toolbar.toolbar ,
+.inline-toolbar.toolbar .button:nth-child(first),
+.inline-toolbar.toolbar GtkToolButton:nth-child(first) .button {
+    border-width: 1;
+}
+
+.inline-toolbar.toolbar .button {
+    border-width: 1 1 1 0;
+    -unico-outer-stroke-width: 0;
+    -unico-inner-stroke-color: alpha (shade (@theme_bg_color, 1.2), 0.5);
+}
+
+.inline-toolbar.toolbar .button *:active,
+.inline-toolbar.toolbar .button *:insensitive,
+.inline-toolbar.toolbar GtkToolButton .button:active,
+.inline-toolbar.toolbar GtkToolButton .button:insensitive {
+    -unico-outer-stroke-style: none;
+}
+
+.inline-toolbar.toolbar .button *:insensitive,
+.inline-toolbar.toolbar GtkToolButton .button:insensitive {
+    background-image: -gtk-gradient (linear, left top, left bottom,
+                                     from (shade (@theme_bg_color, 1.02)),
+                                     to (shade (@theme_bg_color, 0.98)));
+}
+
+
 
