--- a/gnome-shell-frugalware-theme/theme/gdm.css
+++ b/gnome-shell-frugalware-theme/theme/gdm.css
@@ -17,14 +17,16 @@
 /* Login Dialog */
 
 .login-dialog-title {
-    font-size: 14pt;
+    font-size: 10pt;
     font-weight: bold;
-    color: #666666;
+    color: #fff;
     padding-bottom: 2em;
 }
 
 .login-dialog {
-    border-radius: 16px;
+    background-color: rgba(11,11,11,0.9);
+    border-color: rgba(255,255,255,0.5);
+    border-radius: 4px;
     min-height: 150px;
     max-height: 700px;
     min-width: 350px;
@@ -61,7 +63,7 @@
 }
 
 .login-dialog-user-list-item:hover .login-dialog-user-list-item-name {
-    color: white;
+    color: #6eabec;
 }
 
 .login-dialog-user-list-item:focus .login-dialog-user-list-item-name {
@@ -79,12 +81,12 @@
 }
 
 .login-dialog-user-list-item:focus .login-dialog-user-list-item-focus-bin {
-    background-color: #666666;
+    background-color: rgba(11,11,11,0.9);
 }
 
 .login-dialog-user-list-item-icon {
-    border: 2px solid #8b8b8b;
-    border-radius: 8px;
+    border: 2px solid rgba(255,255,255,0.5);
+    border-radius: 4px;
     width: 64px;
     height: 64px;
 }
@@ -109,7 +111,7 @@
 .login-dialog-prompt-entry {
     padding: 4px;
     border-radius: 4px;
-    border: 2px solid #5656cc;
+    border: 1px solid #111;
     color: black;
     background-color: white;
     caret-color: black;
@@ -139,12 +141,11 @@
 }
 
 .login-dialog-session-list-scroll-view {
-    background-gradient-start: rgba(80,80,80,0.3);
-    background-gradient-end: rgba(80,80,80,0.7);
     background-gradient-direction: vertical;
-    box-shadow: inset 0px 2px 4px rgba(0,0,0,0.9);
-    border-radius: 8px;
-    border: 1px solid rgba(80,80,80,1.0);
+    background-gradient-start: #6eabec;
+    background-gradient-end: #3880ca;
+    color: #fff;
+    box-shadow: inset 0px 0px 1px 1px rgba(255,255,255,0.1);
     padding: .5em;
 }
 
