* updating gtk2 and 3, metacity theme

--- a/gnome-frugalware/theme/Frugalware/gtk-3.0/gtk-widgets.css
+++ b/gnome-frugalware/theme/Frugalware/gtk-3.0/gtk-widgets.css
@@ -377,21 +377,19 @@ GtkComboBox.combobox-entry .button:insensitive,
 /* default button */
 .button.default {
     background-image: -gtk-gradient (linear, left top, left bottom,
-                                     from (mix (shade (@selected_bg_color, 1.04), @bg_color, 0.3)),
-                                     to (mix (shade (@selected_bg_color, 0.96), @bg_color, 0.3)));
-
-    text-shadow: 0 1 alpha (shade (@selected_bg_color, 1.26), 0.4);
-
-    -unico-focus-border-color: @transparent;
-    -unico-focus-outer-stroke-color: alpha (@selected_bg_color, 0.2);
-
+                                     from (mix (shade (@bg_color, 1.1), shade (@selected_bg_color, 0.65),0.17)),
+                                     to (mix (shade (@bg_color, 0.9), shade (@selected_bg_color, 0.65),0.17)));
+    -unico-outer-stroke-gradient: -gtk-gradient (linear, left top, left bottom,
+                                                 from (alpha (mix (shade (@button_bg_color, 0.78), shade (@selected_bg_color, 0.35),0.3), 0.15)),
+                                                 to (alpha (mix (shade (@button_bg_color, 0.78), shade (@selected_bg_color, 0.35),0.3), 0.15)));
+    -unico-outer-stroke-width: 1;
     -unico-border-gradient: -gtk-gradient (linear, left top, left bottom,
-                                           from (mix (shade (@selected_bg_color, 0.85), @bg_color, 0.3)),
-                                           to (mix (shade (@selected_bg_color, 0.7), @bg_color, 0.3)));
-    
+                                           from (alpha (shade (@selected_bg_color, 0.4),0.4)),
+                                           to (alpha (shade (@selected_bg_color, 0.3),0.6)));
+					   
     -unico-inner-stroke-gradient: -gtk-gradient (linear, left top, left bottom,
-                                                 from (mix (shade (@selected_bg_color, 1.42), @bg_color, 0.3)),
-                                                 to (mix (shade (@selected_bg_color, 1.12), @bg_color, 0.3)));
+                                                 from (shade (@button_bg_color, 1.2)),
+                                                 to (shade (@button_bg_color, 1.06)));
 }
 
 .button.default:hover {
@@ -433,6 +431,23 @@ GtkComboBox.combobox-entry .button:insensitive,
                                            to (shade (@button_bg_color, 0.7)));
     -unico-glow-color: shade (@selected_bg_color, 0.85);
     -unico-glow-radius: 12;
+    -unico-inner-stroke-gradient: -gtk-gradient (linear, left top, left bottom,
+                                                 from (shade (@button_bg_color, 1.2)),
+                                                 to (shade (@button_bg_color, 1.06)));
+}
+
+.button.default:focused {
+    background-image: -gtk-gradient (linear, left top, left bottom,
+                                     from (mix (shade (@bg_color, 1.12), shade (@selected_bg_color, 0.65),0.2)),
+                                     to (mix (shade (@bg_color, 0.92), shade (@selected_bg_color, 0.65),0.2)));
+    -unico-outer-stroke-gradient: -gtk-gradient (linear, left top, left bottom,
+                                                 from (alpha (mix (shade (@button_bg_color, 0.58), shade (@selected_bg_color, 0.35),0.3), 0.3)),
+                                                 to (alpha (mix (shade (@button_bg_color, 0.58), shade (@selected_bg_color, 0.35),0.3), 0.3)));
+    -unico-outer-stroke-width: 1;
+    -unico-border-gradient: -gtk-gradient (linear, left top, left bottom,
+                                           from (alpha (shade (@selected_bg_color, 0.4),0.8)),
+                                           to (alpha (shade (@selected_bg_color, 0.3),0.9)));
+					   
     -unico-inner-stroke-gradient: -gtk-gradient (linear, left top, left bottom,
                                                  from (shade (@button_bg_color, 1.2)),
                                                  to (shade (@button_bg_color, 1.06)));
@@ -888,47 +903,40 @@ GtkIconView.view.cell:selected:focused {
 	padding: 0;
 	background-image: none;
 	background-color: @dark_bg_color;
-	border-color: shade (@dark_bg_color,0.5);
+	border-color: shade (@dark_bg_color,0.6);
 	color: @selected_fg_color;
-	border-width: 1 1 1 1;
+	border-width: 1;
 	border-style: solid;
 }
 
 /* menuitem */
 .menuitem {
-	padding: 2;
+	padding: 4 0 4 0;
 	border-width: 1;
 	border-radius: 0;
 	border-style: solid;
+	border-color: shade (@dark_bg_color,0.3);
+	color: @selected_fg_color;
 	background-image: -gtk-gradient (linear, left top, left bottom,
 		from (shade (@menuitem_background_a, 1.0)),
 		to (shade (@menuitem_background_b, 1.0)));
 
 	-unico-bullet-color: @selected_fg_color;
-	-unico-border-gradient: -gtk-gradient (linear, left top, left bottom,
-		from (alpha (@selected_bg_color, 0.0)),
-		to (alpha (@selected_bg_color, 0.0)));
 	-unico-inner-stroke-style: none;
 }
 
-.menuitem:active {
-	color: @selected_fg_color;
-}
-
-.menuitem:prelight {
+.menuitem:hover,
+.menuitem *:hover {
 	background-image: -gtk-gradient (linear, left top, left bottom,
-		from (shade (@dark_bg_color, 0.50)),
-		to (shade (@dark_bg_color, 0.40)));
-	background-color: shade (@bg_color_dark,0.5);
+		from (shade (@dark_bg_color, 0.75)),
+		to (shade (@dark_bg_color, 0.5)));
 	border-style: solid;
-	border-width: 1; /* Keep at 1. Menu gets bumpy otherwise. */
+	border-width: 0;
 	border-radius: 0;
-	border-color: shade (@dark_bg_color,0.3);
-}
-
-
-
-.menuitem *:prelight {
+	-unico-inner-stroke-gradient: -gtk-gradient (linear, left top, left bottom,
+                                                 from (shade (@dark_bg_color,0.48)),
+                                                 to (shade (@dark_bg_color,0.48)));
+	-unico-inner-stroke-width: 1;
 	color: @selected_fg_color;
 	text-shadow: none;
 }
@@ -967,17 +975,17 @@ GtkIconView.view.cell:selected:focused {
 	border-width: 1;
 }
 
-.menubar.menuitem {
+.menubar.menuitem,
+.menubar .menuitem {
 	border-radius: 0;
 	border-width: 1;
-}
-
-.menubar.menuitem {
-	color: @text_color;
-}
-
-.menubar.menuitem:prelight {
+	padding: 2 6 2 6;
 	color: @fg_color;
+}
+
+.menubar.menuitem:hover,
+.menubar .menuitem *:hover {
+	color: @selected_fg_color;
 	text-shadow: none;
 	background-image: -gtk-gradient (linear, left top, left bottom,
 		from (shade (@dark_bg_color, 0.70)),
@@ -1403,7 +1411,8 @@ GtkScrolledWindow.frame {
 
 .menuitem.separator {
     -GtkMenuItem-horizontal-padding: 0;
-    border-color: shade (@dark_bg_color, 0.96);
+    padding: 2 0 2 0;
+    border-color: shade (@dark_bg_color, 0.86);
 
     -unico-inner-stroke-color: alpha (shade (@dark_bg_color, 1.26), 0.5);
 }
@@ -1789,6 +1798,14 @@ GtkHandleBox {
 	-unico-border-gradient: none;
 	-unico-inner-stroke-color: alpha (shade (@bg_color, 1.5), 0.2);
 	-unico-inner-stroke-gradient: none;
+}
+
+/* secondary toolbar */
+
+.secondary-toolbar.toolbar {
+	border-style: solid;
+	border-bottom-color: shade (@bg_color,0.71);
+	border-width: 0 0 1 0;
 }
 
 /* inline-toolbar */
